samples/_failures_safe/1761343228_67ae9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c22f0eaa.c: In function ‘main’:
./samples/SAFE/__tmp_c22f0eaa.c:147:20: error: missing terminating " character
  147 |             printf("Matrix B
      |                    ^~~~~~~~~
./samples/SAFE/__tmp_c22f0eaa.c:147:13: error: expected expression at end of input
  147 |             printf("Matrix B
      |             ^~~~~~
./samples/SAFE/__tmp_c22f0eaa.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c22f0eaa.c:147:13: error: expected declaration or statement at end of input
